--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "symbols"]
 	path = unicode/symbols
   url = https://github.com/multiverse-os/symbols
+
+[submodule "banner"]
+	path = banner
+  url = https://github.com/multiverse-os/banner
