simplfiy symbols location

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "symbols"]
-	path = unicode/symbols
-  url = https://github.com/multiverse-os/symbols
+	path = symbols
+  url = git@github.com:multiverse-os/symbols.git
+
 [submodule "banner"]
 	path = banner
 	url = git@github.com:multiverse-os/banner.git
