--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "banner"]
 	path = banner
 	url = git@github.com:multiverse-os/banner.git
+[submodule "symbols"]
+	path = symbols
+	url = git@github.com:multiverse-os/symbols.git
